Add the first version of my review

--- a/review/review.tex
+++ b/review/review.tex
@@ -58,6 +58,28 @@ The last paragraph of this section proposes the most significant idea, adopting 
 \subsection{Conclusion}
 This section concludes the prospects of the former topics and shows the prospects for the adoption of new 5G technologies.
 
+\section{Strengths}
+It proposed a very innovative and practical idea that combines computer network and telecom technologies with a real-world production scenario. It provides abundant real-world examples and clear figures.
+It also gives a detailed, comprehensive overview of the current railway control system in Europe with comparisons (But I think it should be more focused on introducing 5G technology to these systems).
+the written English and grammar of the paper is good (much better than mine).
+
+\section{Weaknesses}
+As a seminar paper in aspect of Internet and security, it should be more focused on 5G (or generally speaking, the network and telecom technologies) itself. The author spends too much attention and length in the former non-digitalized railway control system, which is not the main focus of the paper.
+The author should also provide more detailed information about the topic itself, i.e. deploying, migrating and integrating 5G technology in railway system.
+The topic and idea is still potential and worth to be further explored, but the organization and content of the paper may need to be improved.
+
+\section{Questions to the author}
+\begin{itemize}
+\item What are the main challenges and difficulties in adopting 5G technology in railway system?
+
+
+\item In confront of these difficulties, what are the potential solutions and strategies?
+
+\item In the phase of migrating new technologies, how can man guarantee that the old and new system can cooperate?
+
+\item In the proposed model of 5G powered railway system in the surrounding area of hamburg, you mention a mechanism of arranging, scheduling and cooperating is needed, can you provide more details about that?
+
+\end{itemize}
 
 \section{Overall Feedback}
 It proposed a very innovative and practical topic combining computer network and telecom technologies with a real-world production scenario.
@@ -67,13 +89,20 @@ It is also remarkable that the authors are good at English writing, and it has a
 I think it should focus more on 5G technologies, not only on showing details of previous railway control systems that are not even so digitalized (but I don't mean it should be completely eliminated for comparison).
 In terms of organization and structure, it lacks a comparison of related works.
 
-\section{Major Remarks}
+\section{Corrections}
 \begin{itemize}
     \item \enquote{designated as ATP-VR/RHK, which is derived from Alstom’s
 EBICab 900 technology.} - need citation.
+    \item Minimal grammar corrections and please see the annotated version of the paper.
 \end{itemize}
 
-\section{Minor Remarks}
+\section{Feedback}
+The paper proposes an innovative and practical idea, but is somewhat in further explanation and discussion around the topic. There are many topics is worth to be further discussed , that will make the content more informative and meaningful for publishing.
 
+\section{Reviewer Confidence}
+I am not quite familiar with the topic, both telecom and railway system. But I can understand most parts of the paper, especially the railway system part, because it provides most comprehensive information.
+
+\section{Evaluation}
+Conditionally accept. But it needs revision with further explanation on the topic.
 
 \end{document}
